# ReprojectionVO

./: .gitignore  README.md  main.py  requirements.txt
datasets/: parameters.py  tum_rgbd.py
lib/ceres_reprojection_pybind/: CMakeLists.txt  ceres_reprojection.cpp
visualization/: evo_ape.py  evo_rpe.py  evo_traj.py
vo/feature/: brief.py  orb.py
vo/optimization/: ceres_reprojection_error.py
